# stt-server

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  DOCKER_DEPLOY.md  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  docker_build.sh  install_deps.sh  install_sherpa_onnx.sh  install_sherpa_onnx_docker.sh  install_sherpa_onnx_simple.sh  main.cpp  run.sh  setup_env.sh  sherpa_config.sh  websocket_asr_server.cpp  websocket_client.py
include/: asr_engine.h  asr_result.h  asr_session.h  common.h  connection_manager.h  logger.h  model_pool.h  oneshot_asr_session.h  server_config.h  websocket_server.h
include/sherpa-onnx/: CMakeLists.txt
src/: asr_engine.cpp  asr_session.cpp  logger.cpp  model_pool.cpp  oneshot_asr_session.cpp  server_config.cpp  websocket_server.cpp
